--- a/css sheet.css
+++ b/css sheet.css
@@ -1,12 +1,33 @@
+body {
+    background-color: #1a0a2ca8;
+}
+
+button {
+    background-color: red;
+    color: aliceblue;
+    font-size: 21pt;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .statsBox {
-    background-color: rgb(57, 57, 209);
+    background-color: rgb(0, 0, 51);
+    color: aliceblue;
+    width: 200px;
+    height: 110px;
+    font-family: 'Courier New', Courier, monospace;
+    border-style: solid groove;
+    padding: 20px;
 }
 
 .scroll {
-    background-color: #9e02a3;
-    width: 200;
-    height: 110px;
+    background-color: #000000;
+    color: aliceblue;
+    width: 300px;
+    height: 210px;
+    border-style: solid groove;
     overflow-y: scroll;
-    text-align: justify;
+    font-size: 15pt;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
     padding: 20px;
-  }
+}
