--- a/css sheet.css
+++ b/css sheet.css
@@ -1,5 +1,12 @@
 body {
-    background-color: #1a0a2ca8;
+    background-color: #000000;
+    color: white;
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 29pt;
 }
 
 button {
@@ -30,4 +37,12 @@ button {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     padding: 20px;
+}
+
+#pImage {
+    float: left;
+}
+
+#eImage {
+    float: right;
 }
